# CUDA-hw

./: README.md
hw01/: CMakeLists.txt  convolution.cl  main.cpp
hw02/: CMakeLists.txt  main.cpp  scan.cl
